# cautl

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  Makefile.am  README.md  cautl  configure.ac
debian/: .gitignore  cautl-sync.doc  cautl-sync.install  changelog  control  copyright  docs
etc/: Makefile.am  cautl  cautl.cnf  cautl.testdir  cautl_client.cnf  cautl_sub.cnf  ocsp@.service
lib/: Makefile.am  functions.sh  subverb-configured.sh  subverb-pre.sh  template.sh
lib/card-opensc/: .svbackend  createcert.sh  erase.sh  getpubkey.sh  identify.sh  initreader.sh  list.sh  pushsignedkey.sh  set-pin.sh
lib/cert-card/: list.sh
lib/cert-openssl/: list.sh  retiring.sh
lib/readerconfig/: Nitrokey_Nitrokey_Pro.sh  gpgcard.sh
lib/subverb/: convert.sh  genconf.sh  gencrl.sh  gencsr.sh  getvar.sh  init.sh  list.sh  ocspcert.sh  ocspexport.sh  ocspserver.sh  personalize-card.sh  reload-card-cert.sh  retiring.sh  revoke.sh  selfsign.sh  show-config.sh  show.sh  sign.sh  sync.sh
lib/subverb-configured.d/: 00.sign.sh
lib/subverb-post.d/: 99.sign.sh
lib/subverb-pre.d/: 00.sign.sh
lib/subverb/list-pre.d/: 00.sync.sh
lib/subverb/retiring-pre.d/: 00.sync.sh
lib/subverb/sign-post.d/: 99.sync.sh
lib/usage-class/: OCSPSigning.sh  ad_kdc.sh  ad_login.sh  default.sh  ipsec.sh  keyid.sh
share/: Makefile.am  base.cnf  client.cnf  default.cnf  personalize-card  subca.cnf
t/: package_complete.sh
t/template/: result  tmplincluded  tmpltest  tmpltest.sh
