
ctllibdir=${exec_prefix}/lib/${PACKAGE}

nobase_dist_ctllib_SCRIPTS= \
	functions.sh \
	subverb-pre.sh \
	subverb-configured.sh \
	subverb/convert.sh \
	subverb/genconf.sh \
	subverb/gencrl.sh \
	subverb/gencsr.sh \
	subverb/getvar.sh \
	subverb/init.sh \
	subverb/list.sh \
	subverb/revoke.sh \
	subverb/selfsign.sh \
	subverb/show.sh \
	subverb/sign.sh \
	template.sh
