
ctllibdir=${exec_prefix}/lib/${PACKAGE}

nobase_dist_ctllib_SCRIPTS= \
	functions.sh \
	card-opensc/getpubkey.sh \
	card-opensc/set-pin.sh \
	card-opensc/createcert.sh \
	card-opensc/initreader.sh \
	card-opensc/erase.sh \
	card-opensc/pushsignedkey.sh \
	card-opensc/list.sh \
	cert-card/list.sh \
	cert-openssl/list.sh \
	readerconfig/gpgcard.sh \
	readerconfig/Nitrokey_Nitrokey_Pro.sh \
	subverb-pre.sh \
	subverb-configured.sh \
	subverb/convert.sh \
	subverb/genconf.sh \
	subverb/gencrl.sh \
	subverb/gencsr.sh \
	subverb/getvar.sh \
	subverb/init.sh \
	subverb/list.sh \
	subverb/personalize-card.sh \
	subverb/revoke.sh \
	subverb/selfsign.sh \
	subverb/show.sh \
	subverb/sign.sh \
	template.sh

nobase_dist_ctllib_DATA= \
	card-opensc/.svbackend \
	cert-card/.svbackend \
	cert-openssl/.svbackend \
	readerconfig/.svbackend
