
ctllibdir=${exec_prefix}/lib/${PACKAGE}

nobase_dist_ctllib_SCRIPTS= \
	functions.sh \
	card-opensc/getpubkey.sh \
	card-opensc/set-pin.sh \
	card-opensc/createcert.sh \
	card-opensc/initreader.sh \
	card-opensc/erase.sh \
	card-opensc/pushsignedkey.sh \
	card-opensc/list.sh \
	card-opensc/identify.sh \
	cert-card/list.sh \
	cert-openssl/list.sh \
	cert-openssl/retiring.sh \
	readerconfig/gpgcard.sh \
	readerconfig/Nitrokey_Nitrokey_Pro.sh \
	subverb-pre.sh \
	subverb-configured.sh \
	subverb-post.sh \
	subverb/convert.sh \
	subverb/genconf.sh \
	subverb/gencrl.sh \
	subverb/gencsr.sh \
	subverb/getvar.sh \
	subverb/init.sh \
	subverb/list.sh \
	subverb/ocspcert.sh \
	subverb/ocspexport.sh \
	subverb/ocspserver.sh \
	subverb/personalize-card.sh \
	subverb/reload-card-cert.sh \
	subverb/retiring.sh \
	subverb/revoke.sh \
	subverb/selfsign.sh \
	subverb/show.sh \
	subverb/show-config.sh \
	subverb/sign.sh \
	subverb/sync.sh \
	subverb-pre.d/00.sync.sh \
	subverb-configured.d/00.sync.sh \
	subverb-post.d/99.sync.sh \
	subverb/sign-post.d/99.sync.sh \
	subverb/list-pre.d/00.sync.sh \
	subverb/retiring-pre.d/00.sync.sh \
	subverb/reload-card-cert-pre.d/00.sync.sh \
	template.sh \
	usage-class/ad_login.sh \
	usage-class/ad_kdc.sh \
	usage-class/default.sh \
	usage-class/ipsec.sh \
	usage-class/keyid.sh \
	usage-class/OCSPSigning.sh

nobase_dist_ctllib_DATA= \
	card-opensc/.svbackend \
	cert-card/.svbackend \
	cert-openssl/.svbackend \
	readerconfig/.svbackend \
	usage-class/.svbackend
